# pdf-rename

./: README.md  environment.yaml  pdf-rename.py  pyproject.toml
src/pdf_rename/: metadata.py  pdf_rename.py
