[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
]

[project]
name = "pdf_rename"
version = "0.1"
description="Helper to rename some files PDF file using their metadata"
authors = [
   {name="Sébastien Le Maguer", email="sebastien.lemaguer@helsinki.fi"}
]
readme = {file="README.md", content-type = "text/markdown"}
classifiers = [
  'Development Status :: 4 - Beta',
  # Audience
  'Intended Audience :: Science/Research',
  # Topics
  # Pick your license as you wish
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
]
dependencies=[
   "papers-cli>=2.12",
   "pymupdf"
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "flake8",
  "basedpyright",
  "black"
]

[project.scripts]
pdf_rename="pdf_rename.__main__:main"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''

[tool.flake8]
max-line-length = 120

[tool.basedpyright]
typeCheckingMode = "standard"
